# valuable-value-rs

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: canonicity.rs  deserialize_any.rs  deserialize_valid.rs  equality.rs  linear_order.rs  partial_order.rs  roundtrip.rs
fuzz/fuzz_targets/compact/: canonicity.rs  deserialize_any.rs  deserialize_valid.rs  roundtrip.rs  typed.rs
fuzz/fuzz_targets/human/: deserialize_any.rs  deserialize_valid.rs  roundtrip.rs  typed.rs
src/: always_nil.rs  compact.rs  compact_test_value.rs  de.rs  helper.rs  helpers.rs  lib.rs  parser_helper.rs  ser.rs  ser_consumer.rs  test_type.rs  test_value.rs  value.rs
src/compact/: de.rs  ser.rs  test_value.rs
src/human/: de.rs  ser.rs  test_value.rs
