[package]
name = "valuable_value"
version = "0.1.0"
edition = "2018"

[features]
# arbitrary = ["atm_parser_helper_common_syntax/default"]
default = ["arbitrary"]

[dependencies]
serde = {version = "1.0.126", features = ["derive"]}
strtod2 = "0.0.1"
thiserror = "1.0.30"
# panda_pile = "0.2.0"
arbitrary = { version = "1.0.3", optional = true, features = ["derive"] }
pretty_dtoa = "0.3.0"
itoa = "1.0.1"
atm_parser_helper = "1.0.0"
atm_parser_helper_common_syntax = "1.0.0"
